package model;

public interface AstComponent {
}
