package parser.syntax.sentence.builder;

import model.AstComponent;
import model.Token;

import java.util.List;

public class IfBuilder implements SentenceBuilder {
  @Override
  public AstComponent buildSentence(List<Token> tokens) {
    return null;
  }
}
